syntax = "proto3";
package rapidmq;

service RapidMq {
  rpc PublishMessage (PublishRequest) returns (PublishResponse);
  rpc ConsumeMessage (ConsumeRequest) returns (ConsumeResponse);
  rpc UpdateState (StateUpdateRequest) returns (StateUpdateResponse);
}

message PublishRequest {
  string queue_name = 1;
  string message_id = 2;
  string content = 3;
}

message PublishResponse {
  bool success = 1;
}

message ConsumeRequest {
  string queue_name = 1;
}

message ConsumeResponse {
  string message_id = 1;
  string content = 2;
}

message StateUpdateRequest {
  string state = 1;
}

message StateUpdateResponse {
  bool success = 1;
}